docs/deployment-guide/goals/k8s/v12-dtr/nginx/values/loki-stack/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress  
metadata:
  name: loki-stack-ingress-int
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.dtr-int-sovity.tvsdevops.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: loki-stack-grafana
            port:
              number: 80
  tls:
  - hosts:
    - grafana.dtr-int-sovity.tvsdevops.co.uk
    secretName: dtr-tls-secret
